# murmur

./: .gitignore  LICENSE  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.agent-state/memory/learnings/: 2026-05-22_indicator-window-hud-tuning.md  2026-05-22_mahiro-whisper-background-dictation.md  2026-05-23_tauri-custom-chrome-cap-reference.md  2026-05-24_cap-like-settings-window-flow.md  2026-05-24_indicator-window-capabilities-and-real-waveform.md  2026-05-24_murmur-logo-source-of-truth.md  2026-05-25_murmur-model-library-downloads.md  2026-05-25_murmur-open-source-ui-polish.md  2026-05-26_astro_landing_page_and_exact_versions.md  2026-05-26_murmur_ui_i18n_formatter_discipline.md  2026-05-26_superwhisper_shell_and_waveform_polish.md  2026-05-27_murmur_loading_wave_reference_alignment.md  2026-05-27_murmur_microphone_selection.md  2026-05-27_recording_esc_shortcut_deadlock.md  2026-05-28_continuous_loading_wave_tuning.md  2026-05-28_murmur_shortcut_capture_permissions.md
.agent-state/metrics/: heartbeat.json  project.json
.github/workflows/: pages.yaml
docs/: development.md  plan.md
site/: astro.config.mjs  package.json
site/src/components/ui/: badge.astro  button.astro  card.astro
site/src/layouts/: base-layout.astro
site/src/pages/: index.astro
site/src/styles/: global.css
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+16 files in other folders)
