[package]
name = "mahiro-whisper"
version = "0.1.0"
description = "Personal macOS dictation app powered by whisper.cpp"
authors = ["mahiro"]
edition = "2021"

[lib]
name = "mahiro_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
cpal = "0.16"
hound = "3"
arboard = "3"
core-graphics = "0.25"
